--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta content="Web Template" name="description">
 	<meta content="Web Template, Minimal HTML Template" name="keywords">
 	<meta content="Nelson Marin" name="author">
-	<meta content="width=device-width, inital-sclae=1, maximum-scale=1" name="viewport">
+	<!--<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> -->
 	<!--Web Typography-->
 	<link href="https://fonts.googleapis.com/css?family=Merriweather:400,700|Yantramanav" rel="stylesheet">
 	<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js">
@@ -138,7 +138,6 @@
 				</div>
 				</div>
 	</section>
-	<br><br>
 		<!--Tours-->
 			<section id="tours">
 				<div class="container">
