--- a/index.html
+++ b/index.html
@@ -58,9 +58,6 @@
 			<div class="container">
 				<div class="row">
 					<div class="columns_4">
-				<h4 class="search">Search</h4>
-					</div>
-					<div class="columns_4">
 				<div class="white-box">
 					<h5>Options...</h5>
 					</div>
@@ -71,10 +68,10 @@
 				</div>
 				</div>
 					<div class="columns_4">	
-				<div class="white-box">
-					<h5>Checkout</h5>
+				<div class="white-box"><h5>Checkout</h5>
 						</div>
 						</div>
+						<p><a class="btn" href="#">SEARCH</a></p> 
 						</div>
 						</div>
 						</div>
