--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 </head>
 <body>
 	<header>
+		
 		<div class="container">
-	<div class="columns_1">
+
+		
 			<nav>
 				<ul class="navigation">
 					<li>
@@ -42,16 +44,21 @@
 					</ul>
 			</nav>
 		</div>
-		</div>
+		
 	</header>
 		<!-- Hero Image -->
 	<section id="hero">
+	
 			<div class="hero-image">
-			<img alt="logotype" src="images/logotype.svg">
+			<div class="container">
+		<a href="index.html" class="branding"></a>
+			</div>
+				<div class="container">
 			<div class="hero-text">
 				<h1 class="header-txt">Explore this beautiful and <br> biodiverse Island Today.</h1>
 				<h3 class="sub-head">…is home to the largest varieties of animal and plant species in <br> the world</h3>
 				</div>
+					</div>
 				</div>
 			<div class="orange">
 				<div class="dop_down">
