--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 	<section id="explore">
 		<div class="container">
 			<div class="explore-image">
-			<h2 class="explore-header">Explore Lorde Howe Island</h2>
+			<h2 class="explore-header">Explore Lord Howe Island</h2>
 				<div class="row">
 				<div class="columns_2">
 				  <iframe width="470px" height="286px" src="https://www.youtube.com/embed/9kZW4aKsWB0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
@@ -154,7 +154,7 @@
 				</div>
 					<div class="columns_3">
 					<img alt="snork=eling" src="images/diving.png" height= "186px" width="300px">
-						<h4 class="tours-headtype">Snorkelling</h4>
+						<h4 class="tours-headtype">Snorkeling</h4>
 				<p>For the snorkelling enthusiast join us on our two hour Specialty Snorkelling Tour to four or more of the lagoons most amazing coral gardens. Enjoy snorkeingl within the calm pristine waters of the lagoon and marvel at the diversity of this reef environment.</p>
 				
 					</div>
@@ -166,13 +166,13 @@
 					</div>
 					<div class="row">
 						<div class="columns_3">
-						<a class="drk-btn alight-left" href="https://www.aur.edu">MORE INFO</a>
+						<a class="drk-btn alight-left" href="https://www.visitnsw.com/destinations/lord-howe-island/water-sports">MORE INFO</a>
 							</div>
 							<div class="columns_3">
-							<a class="drk-btn alight-left" href="https://www.aur.edu">MORE INFO</a>
+							<a class="drk-btn alight-left" href="https://www.visitnsw.com/destinations/lord-howe-island/water-sports">MORE INFO</a>
 						</div>
 							<div class="columns_3">
-						<a class="drk-btn alight-left" href="https://www.aur.edu">MORE INFO</a>
+						<a class="drk-btn alight-left" href="https://www.visitnsw.com/destinations/lord-howe-island/water-sports">MORE INFO</a>
 						</div>
 					</div>
 				</div>
@@ -262,7 +262,7 @@
 				<!--Accomadations-->
 				<section id="accommodations">
 					<div class="container">
-					<h2 class="Accommodations">Lorde Howe Island Accommodations</h2>
+					<h2 class="Accommodations">Lord Howe Island Accommodations</h2>
 					<div class="row">
 						<div class="columns_2">
 							<img alt="stay1" src="images/stay1.jpg">
@@ -359,7 +359,7 @@
 	</section>
 	<section>
 			<div class="copyright align-center">
-					<p class="copyright-b">&copy; 2018 Lorde Howe Island | All rights reserved</p> 
+					<p class="copyright-b">&copy; 2018 Lord Howe Island | All rights reserved</p> 
 				</div>
 	</section>
 
