--- a/index.html
+++ b/index.html
@@ -277,10 +277,10 @@
 								</div>
 						<div class="row">
 								<div class="columns_2">
-							<a class="drk-btn alight-left" href="https://www.aur.edu">MORE INFO</a>
+							<a class="drk-btn alight-left" href="https://www.tripadvisor.com/SmartDeals-g528988-Lord_Howe_Island-Hotel-Deals.html">MORE INFO</a>
 						</div>
 							<div class="columns_2">
-						<a class="drk-btn alight-left" href="https://www.aur.edu">MORE INFO</a>
+						<a class="drk-btn alight-left" href="https://www.tripadvisor.com/SmartDeals-g528988-Lord_Howe_Island-Hotel-Deals.html">MORE INFO</a>
 						</div>
 						</div>
 					</div>
