--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 						<div class="type-overlay-4">
 						 <div class="to-do-txt">
 							 <h3 class="to-do-txt">Camping</h3>
-						<p class="to-do-txt">stunning ocean and mountain views the lodge affords a civilised, stylish and sophisticated escape. Capella’s contemporary cuisine, first name service, relaxed sophistication and intimate surrounds combine to deliver a unique and exclusive Lord Howe Island experience.</p>
+						<p class="to-do-txt">stunning ocean and mountain views the lodge affords a civilised, C relaxed sophistication and intimate surrounds combine to deliver a unique and exclusive Lord Howe Island experience.</p>
 					</div>
 					</div>
 					</div>
@@ -269,7 +269,7 @@
 				<!--Accomadations-->
 				<section id="accommodations">
 					<div class="container">
-					<h2 class="Accommodations">Lord Howe Island Accommodations</h2>
+					<h2 class="Accommodations" align="center">Lord Howe Island Accommodations</h2>
 					<div class="row">
 						<div class="columns_2">
 							<img alt="stay1" src="images/stay1.jpg">
@@ -366,7 +366,7 @@
 	</section>
 	<section>
 			<div class="copyright align-center">
-					<p class="copyright-b">&copy; 2018 Lord Howe Island | All rights reserved</p> 
+					<p class="copyright-b">&copy; 2020 Lord Howe Island | All rights reserved</p> 
 				</div>
 	</section>
 
