--- a/index.html
+++ b/index.html
@@ -23,31 +23,16 @@
 <script src="js/scrollIt.js" type="text/javascript"></script>
 	</head>
 <body>
-	<header class="headroom headroom--pinned headroom headroom--unpinned">
-		
+	<header class="topnav">
+				<a href="index.html" class="branding"></a>
 		<div class="container">
-
-		
 			<nav>
 				<ul class="navigation">
-					<li>
-						<a data-scroll-nav="0">Home</a>
-					</li>
-					<li>
-						<a data-scroll-nav="1">ACCOMMODATIONS</a>
-					</li>
-					<li>
-						<a data-scroll-nav="2">THINGS TO DO</a>
-					</li>
-					<li>
-						<a data-scroll-nav="3">GALLERY</a>
-					</li>
-					<li>
-						<a data-scroll-nav="4">ATTRACTIONS</a>
-					</li>
-					<li>
-						<a href="#">TOURS</a>
-					</li>
+		 <li class="menu-item"><a href="#accomodations">ACCOMMODATIONS</a></li>
+        <li class="menu-item"><a href="#things-to-do">THINGS TO DO</a></li>
+		 <li class="menu-item"><a href="#tours">TOURS</a></li>
+        <li class="menu-item"><a href="#Gallery">GALLERY</a></li>
+		<li class="menu-item"><a href="#landmarks">LANDMARKS</a></li>
 					</ul>
 			</nav>
 		</div>
@@ -57,9 +42,6 @@
 	<section id="hero">
 	
 			<div class="hero-image">
-			<div class="container">
-		<a href="index.html" class="branding"></a>
-			</div>
 				<div class="container">
 			<div class="hero-text">
 				<h1 class="header-txt">Explore this beautiful and <br> biodiverse Island Today.</h1>
@@ -187,9 +169,9 @@
 				</div>
 	</section>
 		<!-- things to do-->
-		<section id="to-do">
+		<section id="things-to-do">
 			<div class="container">
-				<h2 class="things_to_do">Things To Do</h2>
+				<h2 align="center" class="things_to_do">Things To Do</h2>
 				<div class="row">
 				<div class="columns_2">
 					<div class="p-eat">
@@ -267,7 +249,7 @@
 		</section>
 				<br><br>
 				<!--Accomadations-->
-				<section id="accommodations">
+				<section id="accomodations">
 					<div class="container">
 					<h2 class="Accommodations" align="center">Lord Howe Island Accommodations</h2>
 					<div class="row">
@@ -278,7 +260,7 @@
 						</div>
 						<div class="columns_2">
 							<img alt="stay2" src="images/stay_2.jpg">
-							<h3 class="stay">“Perfect place To Stay”</h3>
+							<h3 class="stay">“Perfect place to stay”</h3>
 							<p>Capella Lodge on Lord Howe Island was the high point of our Australia trip in February. The situation of the lodge is breathtaking, and its deck is perfectly positioned for spectacular sunsets; the food is first-rate, beautifully presented and served by magnificently competent and friendly</p>
 						</div>
 								</div>
